// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FocusLink should render as a Link with object to 1`] = `
<a
  href="/demo/path?id=1"
>
  Click me
  <span>
    {"focus":true}
  </span>
  <span
    data-testid="linkType"
  >
    Link
  </span>
</a>
`;

exports[`FocusLink should render as a Link with string to 1`] = `
<a
  href="/demo/path"
>
  Click me
  <span>
    {"focus":true}
  </span>
  <span
    data-testid="linkType"
  >
    Link
  </span>
</a>
`;

exports[`FocusLink should render as a NavLink with object to 1`] = `
<a
  href="/demo/path?id=1"
>
  Click me
  <span>
    {"focus":true}
  </span>
  <span
    data-testid="linkType"
  >
    NavLink
  </span>
</a>
`;

exports[`FocusLink should render as a NavLink with string to 1`] = `
<a
  href="/demo/path"
>
  Click me
  <span>
    {"focus":true}
  </span>
  <span
    data-testid="linkType"
  >
    NavLink
  </span>
</a>
`;
